--- a/index.html
+++ b/index.html
@@ -8,7 +8,14 @@
     <title>StackDash</title>
   </head>
   <body>
-    <p id="photo-credit"></p>
+    <main>
+      <div class="top-display">
+        <p id="crypto">Crypto</p>
+        <p>Weather</p>
+      </div>
+      <h1>Time/Date</h1>
+      <p id="photo-credit"></p>
+    </main>
     <script src="app.js"></script>
   </body>
 </html>
