reverted some code to original state

--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
   </head>
   <body>
     <main>
-      <div class="top-display">
-        <p id="crypto">Crypto</p>
+      <div id="top-display">
+        <div id="crypto">
+          <div id="crypto-top"></div>
+        </div>
         <p>Weather</p>
       </div>
       <h1>Time/Date</h1>
