Cleaned up CSS and layout

--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
   </head>
   <body>
     <main>
-      <div id="top-display">
+      <div class="top-display">
         <div id="crypto">
           <div id="crypto-top"></div>
         </div>
         <p>Weather</p>
       </div>
-      <h1>Time/Date</h1>
+      <h1 class="time">Time/Date</h1>
       <p id="photo-credit"></p>
     </main>
     <script src="app.js"></script>
