first attempt at weather api

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         </div>
         <p>Weather</p>
       </div>
-      <h1 class="time">Time</h1>
+      <h1 class="time"></h1>
       <p id="photo-credit"></p>
     </main>
     <script src="app.js"></script>
