--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div id="crypto">
           <div id="crypto-top"></div>
         </div>
-        <p>Weather</p>
+        <div id="weather"></div>
       </div>
       <h1 class="time"></h1>
       <p id="photo-credit"></p>
